<!--<resources>-->
<!--    <string name="app_name">DietCraft</string>-->
<!--    <string name="week_plan">Week Plan</string>-->
<!--    <string name="healthy_challenges">Healthy Challenges</string>-->
<!--    <string name="recipe_library">Recipe Library</string>-->
<!--    <string name="home">Home</string>-->
<!--</resources>-->

<resources>
    <string name="app_name"> Diet Craft </string>

    <string name="navigation_drawer_open">Open navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>

    <!--    LOGIN PAGE-->
    <string name="wel">Welcome</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="pass">Forgot your password ?</string>
    <string name="email">Email</string>
    <string name="acc">Don\'t have account. Sign up !</string>

    <!--    SIGNUP PAGE-->
    <string name="signup">Sign Up</string>
    <string name="password2">Password</string>
    <string name="email2">Email</string>
    <string name="user">Username</string>
    <string name="acc2">Create Account</string>
    <string name="login2">Already have an account. Login</string>

    <!--    CALENDAR PAGE-->
    <string name="cal">Calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    HOME PAGE-->

    <string name="hey">Hey</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="recipe_image">Recipe Image</string>
</resources>